<resources>
    <string name="app_name">SkyScanner</string>

    <!--  Bottom menu  -->
    <string name="bottom_menu_home">Home</string>
    <string name="bottom_menu_map">Map</string>
    <string name="bottom_menu_flights">Flights</string>
    <string name="bottom_menu_weather">Weather</string>

    <!--  Weather  -->
    <string name="weather_default_temperature" translatable="false">-ºc</string>
    <string name="weather_default_city" translatable="false">-</string>
    <string name="weather_alternate_text">Weather</string>
    <string name="weather_default_time" translatable="false">-</string>
    <string name="weather_status">Weather Status</string>
    <string name="error_forecast">Could not obtain the forecast</string>
    <string name="humidity">humidity</string>
    <string name="winds">winds</string>
    <string name="degrees">degrees</string>
    <string name="weather_degrees_celsius" translatable="false">ºC</string>
    <string name="weather_home_demo_date">19:30, sáb. 09 may. 2020</string>


    <!--  Arrivals / Departures -->
    <string name="flight_default_city" translatable="false">-</string>
    <string name="flight_default_time" translatable="false">- : -</string>
    <string name="flight_default_date" translatable="false" />

    <string name="airport_unknown">Unknown airport</string>
    <string name="flights_fetching">Downloading flight data…</string>
    <string name="flights_error">No new flights available</string>
    <string name="flights_today">Today</string>

    <string name="arrivals_arrivals">Arrivals</string>
    <string name="arrivals_incoming">Incoming arrivals</string>
    <string name="arrivals_from">From</string>
    <string name="arrivals_time_arrival">ETA</string>
    <string name="arrivals_distance_left">%1$d km to destination</string>
    <string name="arrivals_table_prefix_name" translatable="false">txArrivalName</string>
    <string name="arrivals_table_prefix_date" translatable="false">txArrivalDate</string>
    <string name="arrivals_table_prefix_time" translatable="false">txArrivalTime</string>

    <string name="departures_departures">Departures</string>
    <string name="departures_incoming">Next departures&#160;&#160;</string>
    <string name="departures_to">To</string>
    <string name="departures_time_departure">ETD</string>
    <string name="departures_distance_covered">%1$d km away from destination</string>
    <string name="departures_table_prefix_name" translatable="false">txDepartureName</string>
    <string name="departures_table_prefix_date" translatable="false">txDepartureDate</string>
    <string name="departures_table_prefix_time" translatable="false">txDepartureTime</string>

    <!-- Login and register -->
    <string name="login">Login</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="create_account">Create an account</string>
    <string name="save_session">Keep me logged in</string>
    <string name="go">Go</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="airport_code">Airport ICAO code</string>
    <string name="password_repeat">Repeat password</string>
    <string name="have_account">I have an account</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="register">Register</string>
    <string name="error_login_empty">You must introduce user and password</string>
    <string name="error_login_credentials">The credentials are not correct</string>
    <string name="error_register_empty">You must fill in all the fields</string>
    <string name="error_register_passwords">Passwords are not equal</string>
    <string name="error_register_password_short">Passwords must contain at least %1$d characters</string>
    <string name="error_register_user_exist">The user already exists</string>
    <string name="error_register_username_short">User names must contain at least %1$d characters</string>
    <string name="error_register_email">Introduce a valid email</string>
    <string name="error_register_airport">The airport code you entered is invalid, check the help link</string>

    <!--  Map  -->
    <string name="map_loading">Fetching airplanes nearby…</string>
    <string name="map_loading_error">Could not get airplanes data</string>
    <string name="map_aircraft">Aircraft %1$s</string>
    <string name="map_aircraft_unknown">Unknown aircraft</string>
    <string name="map_unavailable">Information unavailable</string>
    <string name="map_speed">Speed: %1$.2f m/s</string>
    <string name="map_default_airport_name">Airport</string>

    <!--  Other  -->
    <string name="icon_landing">Plane landing icon</string>
    <string name="icon_takeoff">Plane taking off icon</string>
    <string name="hello">Hello</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="logout">Log out</string>
    <string name="about">About</string>
    <string name="about_message">%1$s App developed by Trominox™ \n\n © %2$s</string>

</resources>
