<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/flightsArrivalsCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/flightsArrivalsCardImage"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/icon_landing"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_flight_land_black_24dp" />

            <TextView
                android:id="@+id/txFlightsArrivalsCardAirport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif-medium"
                android:includeFontPadding="false"
                android:maxLength="16"
                android:maxLines="1"
                android:text="@string/weather_default_city"
                android:textColor="@android:color/black"
                android:textSize="21sp"
                app:layout_constraintStart_toEndOf="@+id/flightsArrivalsCardImage"
                app:layout_constraintTop_toTopOf="@+id/flightsArrivalsCardImage"
                tools:text="@string/weather_default_city" />

            <TextView
                android:id="@+id/txFlightsArrivalsCardTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/weather_default_time"
                android:textColor="@color/colorBackground"
                android:textSize="21sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txFlightsArrivalsCardAirport"
                tools:text="@string/weather_default_time" />

            <TextView
                android:id="@+id/txFlightsArrivalsCardDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arrivals_distance_left"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/flightsArrivalsCardImage"
                app:layout_constraintStart_toStartOf="@+id/txFlightsArrivalsCardAirport"
                app:layout_constraintTop_toBottomOf="@+id/txFlightsArrivalsCardAirport"
                app:layout_constraintVertical_bias="1.0"
                tools:text="@string/arrivals_distance_left" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>